# sat_scaffolding

./: CMakeLists.txt  README.md  docker-compose.yaml
modes/: CMakeLists.txt
modes/full/: CMakeLists.txt
modes/full/include/: full.h  full_directories.h  full_templates.h
modes/full/include/directories/adapters/: full_adapters_directories.h
modes/full/include/directories/application/: full_application_directories.h
modes/full/include/directories/common/: full_common_directories.h
modes/full/include/directories/domain/: full_domain_directories.h
modes/full/include/directories/root/: full_resources_directories.h  full_root_directories.h  full_source_directories.h  full_tools_directories.h
modes/full/include/templates/: full_templates.h
modes/full/include/templates/adapters/: full_adapters_templates.h
modes/full/include/templates/application/: application_templates.h
modes/full/include/templates/cmd/: cmd_templates.h
modes/full/include/templates/common/: common_templates.h
modes/full/include/templates/deploy/: full_deploy_templates.h
modes/full/include/templates/domain/: domain_templates.h
modes/full/include/templates/root/: full_root_templates.h
modes/full/modules/: CMakeLists.txt
modes/full/modules/adapters/: CMakeLists.txt
modes/full/modules/adapters/include/: adapters_directory.h  adpters_template.h
modes/full/modules/adapters/src/: adapters_cmake_root_template.c  adapters_directory.c
modes/full/modules/application/: CMakeLists.txt
modes/full/modules/application/include/: application_directory.h
modes/full/modules/application/src/: application_directory.c
modes/full/modules/cmd/: CMakeLists.txt
modes/full/modules/cmd/include/: cmd_directory.h
modes/full/modules/cmd/src/: cmd_directory.c
modes/full/modules/common/: CMakeLists.txt
modes/full/modules/common/include/: common_directory.h
modes/full/modules/common/src/: common_directory.c
modes/full/modules/config/: CMakeLists.txt
modes/full/modules/config/include/: config_directory.h
modes/full/modules/config/src/: config_directory.c
modes/full/modules/deploy/: CMakeLists.txt
modes/full/modules/deploy/include/: deploy_directory.h
modes/full/modules/deploy/src/: deploy_directory.c
modes/full/modules/domain/: CMakeLists.txt
modes/full/modules/domain/include/: domain_directory.h
modes/full/modules/domain/src/: domain_directory.c
modes/full/modules/resources/: CMakeLists.txt
modes/full/modules/resources/include/: resources_directory.h
modes/full/modules/resources/src/: resources_directory.c
modes/full/modules/tools/: CMakeLists.txt
modes/full/modules/tools/include/: tools_directory.h
modes/full/modules/tools/src/: tools_directory.c
modes/full/src/: full.c  full_directories.c
modes/full/src/directories/: full_adapters_directory.c  full_application_directory.c  full_cmd_directory.c  full_common_directory.c  full_config_directory.c  full_deploy_directory.c  full_domain_directory.c  full_resources_directory.c  full_tools_directory.c
modes/full/src/directories/adapters/: full_adapters_directories.c
modes/full/src/directories/application/: full_application_directories.c
modes/full/src/directories/common/: full_common_directories.c
modes/full/src/directories/domain/: full_domain_directories.c
modes/full/src/directories/root/: full_resources_directories.c  full_root_directories.c  full_source_directories.c  full_tools_directories.c
modes/full/src/templates/: cmake_source_template.c  cmake_template.c  docker_compose_template.c  dockerfile_template.c  gitignore_template.c  readme_template.c
modes/full/src/templates/adapters/: full_adapters_cmake_template.c  full_adapters_config_cmake_template.c  full_adapters_config_header_template.c  full_adapters_config_source_template.c  full_adapters_controllers_cmake_template.c  full_adapters_ports_cmake_template.c  full_adapters_repositories_cmake_template.c
modes/full/src/templates/application/: application_cmake_template.c  application_context_cmake_template.c  application_context_header_template.c  application_context_source_template.c  application_services_cmake_template.c  application_services_source_template.c  application_tests_cmake_template.c  application_tests_source_template.c
modes/full/src/templates/cmd/: full_cmd_cmake_template.c  full_cmd_main_template.c
modes/full/src/templates/common/: common_cmake_template.c  common_source_template.c
modes/full/src/templates/domain/: domain_cmake_template.c  domain_entities_cmake_template.c  domain_entities_source_template.c  domain_ports_cmake_template.c  domain_services_cmake_template.c  domain_services_source_template.c  domain_tests_cmake_template.c  domain_tests_source_template.c  domain_value_objects_cmake_template.c  domain_value_objects_source_template.c
modes/full/src/templates/root/: full_root_cmake_source_template.c  full_root_cmake_template.c  full_root_docker_compose_template.c  full_root_dockerfile_template.c  full_root_gitignore_template.c  full_root_readme_template.c
modes/minimal/: CMakeLists.txt
modes/minimal/include/: minimal.h  minimal_directories.h  minimal_templates.h
modes/minimal/src/: minimal.c  minimal_directories.c
modes/minimal/src/templates/: minimal_cmake_template.c  minimal_gitignore_template.c  minimal_main_template.c
modes/workspace/: CMakeLists.txt
modes/workspace/include/: workspace.h  workspace_directories.h  workspace_templates.h
modes/workspace/src/: workspace.c  workspace_directories.c
shared/: CMakeLists.txt
shared/include/: shared.h
shared/src/: shared.c
src/: CMakeLists.txt  application_source_template.c  docker_compose_template.c  dockerfile_template.c  main.c
templates/: Dockerfile.in
